[package]
name = "quake_text"
description = "Utility for handling Quake strings and characters."
keywords = ["quake", "quakeworld", "strings"]
repository = "https://github.com/vikpe/quake_text"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
    "/tests/**",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
